--- a/src/main/resources/static/assets/stylesheets/login.css
+++ b/src/main/resources/static/assets/stylesheets/login.css
@@ -93,6 +93,7 @@ input::placeholder {
     color: #FFEFD0;
     background-color: #85C8D5;
     border: none;
+    outline: none;
     box-shadow:
             0 2px 5px rgba(0, 0, 0, 0.5),
             0 1px 0 rgba(255, 255, 255, 0.25) inset,
