--- a/src/main/resources/template/login.twig
+++ b/src/main/resources/template/login.twig
@@ -19,41 +19,53 @@
 
 <div id="background-image"></div>
 
-<section content="primary-section" id="login-content">
+{% if isNewSession == true %}
 
-    <div class="login-form-container">
+    <section content="primary-section" id="login-content">
 
-        <div class="logo-container">
-            <img src="../static/assets/images/logo/logo_transparent.png" alt="Logo"/>
+        <div class="login-form-container">
+
+            <div class="logo-container">
+                <img src="../static/assets/images/logo/logo_transparent.png" alt="Logo"/>
+            </div>
+
+            <form class="login-form" method="POST">
+
+                <input type="text" name="login-name" placeholder="Name" maxlength="25" required="required"
+                       class="name"/>
+                <br/>
+                <input type="password" name="login-password" placeholder="Password" required="required"
+                       class="password"/>
+                <br/>
+                <input type="submit" value="Login" name="login-button" class="button"/>
+
+            </form>
+
         </div>
 
-        <form class="login-form" method="POST">
+    </section>
 
-            <input type="text" name="name" placeholder="Name" maxlength="25" required="required" class="name"/>
-            <br/>
-            <input type="password" name="password" placeholder="Password" required="required" class="password"/>
-            <br/>
-            <input type="submit" value="Login" name="login-button" class="button"/>
+{% endif %}
 
-        </form>
+{% if isNewSession == false %}
 
-    </div>
+    <section content="greeting-section" id="greeting-content">
 
-</section>
+        <div class="greeting-container">
 
-<section content="greeting-section" id="greeting-content">
+            <h2>Greetings</h2>
 
-    <div class="greeting-container">
+            <h1>{{ name }}</h1>
 
-        <h2>Greetings</h2>
+            <form method="POST">
+                <input type="submit" value="Logout" name="logout-button" class="button"/>
+            </form>
 
-        <h1>{{ name }}</h1>
+        </div>
 
-        <input type="submit" value="Logout" name="logout-button" class="button"/>
+    </section>
 
-    </div>
-
-</section>
+{% endif %}
 
 </body>
 
